--- a/src/main/java/com/mycompany/jogos/InternaC.form
+++ b/src/main/java/com/mycompany/jogos/InternaC.form
@@ -26,7 +26,7 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <Component id="jpPrincipal" max="32767" attributes="0"/>
-              <EmptySpace min="-2" pref="274" max="-2" attributes="0"/>
+              <EmptySpace min="-2" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -48,7 +48,7 @@
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="jbtAtualizar" min="-2" pref="126" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Component id="jbtRecuperar" max="32767" attributes="0"/>
+                  <Component id="jbtRecuperar" pref="91" max="32767" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="jbtExcluir" linkSize="1" min="-2" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -61,13 +61,15 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace pref="261" max="32767" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jbtInserir" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jbtAtualizar" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Group type="103" alignment="3" groupAlignment="3" attributes="0">
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Group type="103" alignment="0" groupAlignment="3" attributes="0">
                           <Component id="jbtRecuperar" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="jbtExcluir" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="jbtListar" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="jbtInserir" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="jbtAtualizar" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
