--- a/src/main/java/com/mycompany/jogos/IjfJogo.form
+++ b/src/main/java/com/mycompany/jogos/IjfJogo.form
@@ -64,23 +64,28 @@
                           </Group>
                       </Group>
                   </Group>
-                  <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" attributes="0">
-                          <Component id="jbtRecuperar" pref="231" max="32767" attributes="0"/>
-                          <EmptySpace max="-2" attributes="0"/>
-                          <Component id="jbtExcluir" linkSize="1" min="-2" max="-2" attributes="0"/>
+                      <Group type="102" alignment="0" attributes="0">
+                          <EmptySpace min="-2" pref="71" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="jtfId" max="32767" attributes="0"/>
+                              <Component id="jtfNome" max="32767" attributes="0"/>
+                              <Component id="jtfSinopse" max="32767" attributes="0"/>
+                              <Component id="jtfClassificacaoEtaria" max="32767" attributes="0"/>
+                              <Component id="jtfEdicao" max="32767" attributes="0"/>
+                              <Component id="jcbEmpresaDesenvolvedora" max="32767" attributes="0"/>
+                              <Component id="jcbEmpresaDistribuidora" alignment="0" max="32767" attributes="0"/>
+                              <Component id="jftfDataDeLancamento" alignment="0" max="32767" attributes="0"/>
+                          </Group>
+                      </Group>
+                      <Group type="102" alignment="0" attributes="0">
+                          <EmptySpace type="separate" max="-2" attributes="0"/>
+                          <Component id="jbtRecuperar" min="-2" pref="173" max="-2" attributes="0"/>
+                          <EmptySpace pref="29" max="32767" attributes="0"/>
+                          <Component id="jbtExcluir" min="-2" pref="103" max="-2" attributes="0"/>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Component id="jbtListar" linkSize="1" min="-2" pref="72" max="-2" attributes="0"/>
                       </Group>
-                      <Component id="jtfId" max="32767" attributes="0"/>
-                      <Component id="jtfNome" max="32767" attributes="0"/>
-                      <Component id="jtfSinopse" max="32767" attributes="0"/>
-                      <Component id="jtfClassificacaoEtaria" max="32767" attributes="0"/>
-                      <Component id="jtfEdicao" max="32767" attributes="0"/>
-                      <Component id="jcbEmpresaDesenvolvedora" max="32767" attributes="0"/>
-                      <Component id="jcbEmpresaDistribuidora" alignment="0" max="32767" attributes="0"/>
-                      <Component id="jftfDataDeLancamento" alignment="0" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
@@ -234,7 +239,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel8">
           <Properties>
-            <Property name="text" type="java.lang.String" value="DATA DE LAN&#xc7;AMENTO"/>
+            <Property name="text" type="java.lang.String" value="DATA DE LAN&#xc7;AMENTO (DD/MM/YYY)"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JComboBox" name="jcbEmpresaDesenvolvedora">
